# lista-de-tareas-docker

tareas-app/: Dockerfile  docker-compose.yml  pyproject.toml  test.db
tareas-app/app/: database.py  main.py  models.py  schemas.py
tareas-app/tests/: test_tareas.py
